--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,15 +9,15 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_login"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Login/Register" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_order"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Orders" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_accounts"
             android:icon="@drawable/ic_menu_manage"
             android:title="Accounts" />
     </group>
@@ -25,11 +25,11 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_contactus"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Contact Us" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Share" />
         </menu>
