--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,19 +15,19 @@
         android:id="@+id/nav_gallery"
         android:name="com.example.wholesalemanagementsystem.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_login" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.wholesalemanagementsystem.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_accounts" />
 
     <fragment
         android:id="@+id/nav_tools"
         android:name="com.example.wholesalemanagementsystem.ui.tools.ToolsFragment"
         android:label="@string/menu_tools"
-        tools:layout="@layout/fragment_tools" />
+        tools:layout="@layout/fragment_contactus" />
 
     <fragment
         android:id="@+id/nav_share"
@@ -39,5 +39,5 @@
         android:id="@+id/nav_send"
         android:name="com.example.wholesalemanagementsystem.ui.send.SendFragment"
         android:label="@string/menu_send"
-        tools:layout="@layout/fragment_send" />
+        tools:layout="@layout/fragment_order" />
 </navigation>
