--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,10 +9,6 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_login"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Login/Register" />
-        <item
             android:id="@+id/nav_order"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Orders" />
@@ -32,6 +28,11 @@
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Share" />
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="Logout" />
+
         </menu>
     </item>
 
