--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#74A1EDF7">
 
     <Button
         android:id="@+id/button_login"
         android:layout_width="374dp"
         android:layout_height="83dp"
         android:layout_marginTop="10dp"
+        android:background="#FFEB3B"
         android:text="Login"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,6 +24,7 @@
         android:id="@+id/button_register"
         android:layout_width="394dp"
         android:layout_height="78dp"
+        android:background="#FFEB3B"
         android:text="register"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +65,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:text="LOGIN"
-        android:textColor="@color/design_default_color_primary_dark"
+        android:textColor="#9C27B0"
         android:textColorHighlight="@color/colorAccent"
         android:textSize="36dp"
         android:textStyle="bold"
@@ -76,6 +79,7 @@
         android:layout_height="39dp"
         android:layout_marginTop="30dp"
         android:text="E-Mail"
+        android:textColor="#3F51B5"
         android:textSize="28dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +94,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
         android:text="Not Registered??  Then Click Here"
+        android:textColor="#E91E63"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +109,7 @@
         android:layout_height="39dp"
         android:layout_marginTop="90dp"
         android:text="Password"
+        android:textColor="#3F51B5"
         android:textSize="28dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
