--- a/app/src/main/res/layout/welcome1.xml
+++ b/app/src/main/res/layout/welcome1.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_screen1">
+    android:background="#339C27B0">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -19,8 +19,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
             android:text="@string/slide_1_title"
-            android:textColor="@android:color/white"
+            android:textColor="#161515"
             android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
 
@@ -32,7 +33,7 @@
             android:paddingRight="@dimen/desc_padding"
             android:text="@string/slide_1_desc"
             android:textAlignment="center"
-            android:textColor="@android:color/white"
+            android:textColor="#E91E63"
             android:textSize="@dimen/slide_desc" />
 
     </LinearLayout>
