--- a/app/src/main/res/layout/row_grid.xml
+++ b/app/src/main/res/layout/row_grid.xml
@@ -15,7 +15,7 @@
     </ImageView>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/profileEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
