--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:text="0 Rs"
+            android:text="0"
             android:textSize="20dp">
         </TextView>
     </LinearLayout>
