--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -13,11 +13,13 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:text="Total : "
+            android:visibility="invisible"
             android:textSize="20dp">
         </TextView>
 
         <TextView
             android:id="@+id/tv_total"
+            android:visibility="invisible"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_width="match_parent"
